--- a/corere/main/templates/main/header.html
+++ b/corere/main/templates/main/header.html
@@ -7,12 +7,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-light ">
   <a class="navbar-brand" href="/"><img src="{% static 'main/CORE2.png' %}" /></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <span class=" mr-auto"></span>
+  <div id="active-manuscript-info" class="pl-4" style="max-width:60%!important;"> 
+  {% if root_object_title%}
+  Working On Manuscript: {{root_object_title}}
+  {% endif %}
+  </div>
+  <div class="ml-auto" id="navbarSupportedContent">
+    {% comment %} <span class="mr-auto"></span> {% endcomment %}
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
