Choose and focus on manuscript user is working on

--- a/corere/main/static/main/output.scss
+++ b/corere/main/static/main/output.scss
@@ -97,6 +97,9 @@ table.dataTable tbody th.focus, table.dataTable tbody td.focus {
     display: flex;
 }
 
+table.disabled, .dataTables_paginate.disabled {
+    pointer-events: none;
+}
 
 //To resolve collection buttons without background not closing right: https://datatables.net/forums/discussion/30377/problem-with-collection-button-and-the-background-false-option-with-workaround
 .dt-button-background { background:transparent ! important; }
